[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PoPs"
version = "1.0.0"
authors = [
    {name = "LLNL", email = "mattoon1@llnl.gov"},
]
description = "Properties of Particles"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pqu",
    "xData",
]

[tool.setuptools]
packages = [
    "PoPs",
    "PoPs.atomic",
    "PoPs.decays",
    "PoPs.families",
    "PoPs.fissionFragmentData",
    "PoPs.chemicalElements",
    "PoPs.quantities",
]
package-dir = {"PoPs" = "."}

[project.scripts]
# Will be populated automatically from bin/*.py

[project.urls]
"Homepage" = "https://github.com/LLNL/fudge"