[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossSectionAdjustForHeatedTarget"
version = "1.0.0"
authors = [
    {name = "LLNL", email = "mattoon1@llnl.gov"},
]
description = "Adjust cross section for heated target"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["crossSectionAdjustForHeatedTarget"]
package-dir = {"crossSectionAdjustForHeatedTarget" = "."}

[project.urls]
"Homepage" = "https://github.com/LLNL/fudge"