[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqu"
version = "1.1.0"
authors = [
    {name = "LLNL", email = "mattoon1@llnl.gov"},
]
description = "Physical Quantity with Uncertainty"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/LLNL/fudge"